<resources>
    <string name="app_name">SkinnyAppBeta</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="page_title">SKINNY\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose">Pilih</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="article">Artikel</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in massa metus. In at urna ut nisi eleifend gravida ac congue turpis. Nulla a metus eget purus laoreet pharetra in id turpis. Aliquam eget massa euismod, elementum ante quis, tincidunt velit. Curabitur eget nisi vehicula tortor dignissim faucibus. Quisque eget massa ac dolor imperdiet rhoncus. Pellentesque ullamcorper vel metus id pellentesque. Vestibulum aliquam malesuada velit, sit amet blandit risus venenatis eu.</string>
    <string name="user_name">Muhammad Rafli Gimnastiar</string>
    <string name="email">gimnastiarrafli@gmail.com</string>
    <string name="setting">Setting</string>
    <string name="warning">PERHATIAN</string>
    <string name="warning_image_description">Untuk mendapatkan hasil maksimal, harap untuk mengambil gambar area kulit yang sedang mengalami sakit saja!</string>
    <string name="next">Lanjutkan</string>
    <string name="retake">Ambil Ulang</string>
    <string name="handling">Cara Penanganan!</string>
    <string name="save">Simpan</string>
    <string name="hutton_to_save_content">Button untuk menyimpan hasil deteksi</string>
    <string name="back">Kembali</string>
    <string name="medecine">Obat</string>
    <string name="tab_text_1">Histori Kamu</string>
    <string name="tab_text_2">Obat</string>
    <string name="theme">Tema</string>
    <string name="theme_desc">Ganti tema dengan switch tombol di samping</string>
    <string name="language">Bahasa</string>
    <string name="language_desc">Pilih bahasa yang ingin anda tampilkan</string>
    <string name="log_out">Keluar</string>
    <string name="add_favorite_desc">button to add favorite article</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="password_wrong">disarankan minimun 6 karakter</string>
    <string name="logout_text_makesure">Apa kamu yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="start">Mulai</string>
    <string name="start_text_advice">Skinny Apps - Bangkit 2023</string>
    <string name="title_onboarding_1">SKINNY APPS</string>
    <string name="description_onboarding_1">Adalah aplikasi untuk deteksi penyakit kulit luar kamu yang sedang kamu alami</string>
    <string name="title_onboarding_2">Artificial Intelligent</string>
    <string name="description_onboarding_2">Setiap foto yang kamu scan, akan kami olah menggunakan model Kecerdasan Buatan yang sudah terlatih</string>
    <string name="title_onboarding_3">Penanganan</string>
    <string name="description_onboarding_3">Kami juga sudah menyedian saran penanganan untuk setiap penyakit yang kamu alami</string>
    <string name="data_not_found">Favorite andra masih kosong</string>
    <string-array name="data_title_article">
        <item>Apa Itu BlackHead?</item>
        <item>Cara Mencegah Kemunculan Eksim</item>
        <item>Gejala Yang Perlu Kamu Ketahui Tentang Panu</item>
        <item>Cara Mencegah Munculnya Jerawat</item>
        <item>Penyebab Munculnya Flek hitam</item>
        <item>Cara Mencegah munculnya Milia</item>
        <item>Berkenalan Lebih Dalam Dengan Kurap</item>
        <item>Gejala Penyakit Herpes</item>
    </string-array>
    <string-array name="data_description_article">
        <item>Blackhead, juga dikenal sebagai komedo terbuka, adalah kondisi kulit yang umum terjadi akibat penyumbatan pori-pori kulit. Penyumbatan tersebut terjadi ketika kotoran, sel kulit mati, minyak alami kulit (sebum), dan bakteri terperangkap di dalam pori-pori dan mengoksidasi ketika terkena udara. Ini menghasilkan penumpukan bintik-bintik hitam kecil yang sering muncul di area hidung, dahi, dan dagu.</item>
        <item>Eksim, yang juga dikenal sebagai dermatitis, adalah kondisi peradangan kulit yang menyebabkan gatal, kemerahan, kering, dan ruam pada kulit. Ada beberapa jenis eksim, termasuk dermatitis atopik, dermatitis kontak, dan dermatitis seboroik. Berikut ini adalah deskripsi umum tentang eksim beserta cara pencegahan, penanganan, dan obat yang umum digunakan.</item>
        <item>Panu, juga dikenal sebagai tinea versicolor atau dermatomikosis superfisialis, adalah infeksi kulit yang disebabkan oleh jamur. Infeksi ini biasanya disebabkan oleh jamur Malassezia yang biasanya ada di kulit manusia tanpa menyebabkan masalah. Namun, dalam beberapa kondisi, jamur ini dapat berkembang biak secara berlebihan dan menyebabkan gejala panu.</item>
        <item>Penyakit jerawat adalah kondisi kulit yang umum terjadi, terutama pada masa remaja, meskipun dapat juga terjadi pada usia dewasa. Jerawat terjadi ketika folikel rambut tersumbat oleh minyak dan sel kulit mati, sehingga menyebabkan peradangan dan timbulnya benjolan merah atau komedo di kulit. Beberapa faktor yang dapat mempengaruhi perkembangan jerawat meliputi perubahan hormon, produksi minyak berlebih di kulit, bakteri Propionibacterium acnes, dan faktor genetik.</item>
        <item>Flek hitam adalah suatu kondisi kulit di mana terdapat bercak-bercak gelap yang muncul pada permukaan kulit. Kondisi ini juga dikenal sebagai hiperpigmentasi, di mana melanin, pigmen yang memberikan warna pada kulit, terakumulasi di area tertentu.</item>
        <item>Penyakit Milia adalah suatu kondisi kulit yang ditandai oleh adanya benjolan kecil berwarna putih atau kekuningan pada permukaan kulit. Benjolan-benjolan ini muncul akibat penumpukan keratin (protein yang ditemukan pada kulit) di dalam pori-pori kulit. Milia biasanya terjadi di wajah, terutama di sekitar area mata, pipi, dan hidung, namun juga dapat muncul di bagian tubuh lainnya.</item>
        <item>Penyakit kurap, juga dikenal sebagai tinea atau dermatofitosis, adalah infeksi kulit yang disebabkan oleh jamur dermatofit. Infeksi ini umumnya terjadi pada kulit, kuku, dan rambut. Kurap biasanya menyebar melalui kontak langsung dengan orang atau hewan yang terinfeksi, atau melalui kontak dengan benda yang terkontaminasi.</item>
        <item>Herpes adalah penyakit yang disebabkan oleh virus herpes simplex. Ada dua jenis virus herpes simplex yang umum: herpes simplex tipe 1 (HSV-1) dan herpes simplex tipe 2 (HSV-2). HSV-1 biasanya terkait dengan infeksi pada area mulut dan bibir, sementara HSV-2 biasanya terkait dengan infeksi pada area kelamin.</item>
    </string-array>
</resources>