<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_app"
            style="@style/textH1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/logout_text_makesure"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tv_app"
            app:layout_constraintStart_toStartOf="@id/tv_app"
            app:layout_constraintTop_toBottomOf="@id/tv_app" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="@string/no"
            app:layout_constraintEnd_toStartOf="@id/btn_yes"
            app:layout_constraintStart_toStartOf="@id/tv_caption"
            app:layout_constraintTop_toBottomOf="@id/tv_caption" />

        <Button
            android:id="@+id/btn_yes"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/yes"
            app:layout_constraintEnd_toEndOf="@id/tv_caption"
            app:layout_constraintStart_toEndOf="@id/btn_no"
            app:layout_constraintTop_toBottomOf="@id/tv_caption" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>