<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_warning"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/warning_ml" />

        <TextView
            android:id="@+id/tv_warning"
            style="@style/textH1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animation_warning" />

        <TextView
            android:id="@+id/tv_description_warning"
            android:layout_width="0dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            android:text="@string/warning_image_description"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_warning"
            app:layout_constraintStart_toStartOf="@id/tv_warning"
            app:layout_constraintEnd_toEndOf="@id/tv_warning"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description_warning"
            app:layout_constraintStart_toStartOf="@id/tv_description_warning"
            app:layout_constraintEnd_toEndOf="@id/tv_description_warning"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>