<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.loginFragment.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_vector"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/login_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_vector" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:startIconDrawable="@drawable/user_icon">

        <com.gimnastiar.skinnyappbeta.ui.customView.MyInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/username_login_layout"
        app:layout_constraintStart_toStartOf="@id/username_login_layout"
        app:layout_constraintTop_toBottomOf="@id/username_login_layout"
        app:startIconDrawable="@drawable/password_icon">

        <com.gimnastiar.skinnyappbeta.ui.customView.MyInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@id/password_login_layout"
        app:layout_constraintStart_toStartOf="@id/password_login_layout"
        app:layout_constraintTop_toBottomOf="@id/password_login_layout" />

    <Button
        android:id="@+id/btn_to_regist"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bg_loading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/black_transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/customImageView4Percent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bg_loading"
        app:layout_constraintEnd_toEndOf="@id/bg_loading"
        app:layout_constraintStart_toStartOf="@id/bg_loading"
        app:layout_constraintTop_toTopOf="@id/bg_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />


</androidx.constraintlayout.widget.ConstraintLayout>